# claudecodeui

./: .claudeui.json.example  .dockerignore  .env  .env.codegen  .env.docker  .env.docker.example  .env.example  .gitignore  .prettierignore  .release-it.json  .releaserc.json  AGENTS.md  ARCHITECTURE.md  AUTHENTIK_INTEGRATION_GUIDE.md  AUTO_COMPACT_FEATURE_PROPOSAL.md  AUTO_COMPACT_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_UI_DOCUMENTATION.md  CLAUDE_VERSION_DETECTION.md  CLOUDFLARE_SETUP.md  CODEGEN_SETUP.md  CONTRIBUTING.md  Codex支持整改计划.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Dockerfile.dev  ELECTRON_SETUP.md  ENHANCED_README.md  ENHANCED_UI_VISION.md  GITHUB_BRANCH_PR_FEATURE.md  GITHUB_OAUTH_SETUP.md  MEMORY_OPTIMIZATION.md  MERGE-CONFLICTS.md  Makefile  PRETASK_API.md  PR_DESCRIPTION.md  QUICK_START_CODEGEN.md  README.de.md  (+62 more)
.fork-join/: current_session  session-1768779775.json  tracked_files.txt
.github/: BRANCH_PROTECTION.md  CICD.md  dependabot.yml  workflows-README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.taskmaster/: config.json  state.json
aws-deployment/: README.md
ccud/: build.js  package-lock.json  package.json
claude_rules/: atualizatasks.mdc  auto-diagnostico-modo-projeto.mdc  estrutura_regras.xml  modoprojeto.mdc  modorecuperacao.mdc  protocolo-verificacao.mdc  (+1 more)
kiro-sdk-python/: .gitignore  README.md  pyproject.toml  pytest.ini
kiro-sdk-python/kiro_sdk/: __init__.py  acp_transport.py  api.py  session.py  types.py
kiro-sdk-python/tests/: test_integration.py
(+2098 files in other folders)
