[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kiro-sdk"
version = "0.1.0"
description = "Python SDK for Kiro CLI via Agent Client Protocol (ACP)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["kiro", "acp", "agent", "cli", "sdk", "ai"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
